--- a/openframeworks/apps/demos/ofxLeastSquares/ofxLeastSquares.cbp
+++ b/openframeworks/apps/demos/ofxLeastSquares/ofxLeastSquares.cbp
@@ -130,6 +130,7 @@
 		<Unit filename="..\..\..\addons\ofxOpenCv\src\ofxCvShortImage.h" />
 		<Unit filename="..\..\..\addons\ofxOpenCv\src\ofxOpenCv.h" />
 		<Unit filename="src\main.cpp" />
+		<Unit filename="src\ofxLeastSquares.cpp" />
 		<Unit filename="src\ofxLeastSquares.h" />
 		<Unit filename="src\testApp.cpp" />
 		<Unit filename="src\testApp.h" />
